--- a/my_app/public/css/style.css
+++ b/my_app/public/css/style.css
@@ -3102,6 +3102,7 @@ span.skill {
 .product_list {
 	min-height: 400px;
 	transition: ease all 0.5s;
+
 }
 
 .cleaning .product_list {
@@ -3113,6 +3114,7 @@ span.skill {
 .product_list:focus {
 	box-shadow: 0 0 25px -17px #000;
 	border-bottom: solid #17a5e9 5px;
+	cursor: pointer;
 }
 
 .product_img {
